@@ -5,7 +5,7 @@ includedir=${prefix}/include
 
 Name: LocARNA
 Description: LocARNA C++ library.
-Version: 1.6.2pre
+Version: 1.6.2
 URL: http://www.bioinf.uni-freiburg.de/Software/LocARNA/
-Libs: -L${libdir} -lLocARNA-1.0
-Cflags: -I${includedir}/LocARNA-1.0
+Libs: -L${libdir} -lLocARNA-1.0 -lRNA   -fopenmp -L/home/will/Soft/ViennaRNA-2.0.0-RC4/lib 
+Cflags: -I${includedir}/LocARNA-1.0 -fopenmp -I/home/will/Soft/ViennaRNA-2.0.0-RC4/include  -g -Wall -Wno-deprecated
